# asciimark

./: .gitignore  .mcp.json  .wiki-guardrails.yml  404.html  BACKLOG.md  CLAUDE.md  CNAME  LICENSING.md  PRIVACY.md  README.md  bunfig.toml  demo.md  index.html  lefthook.yml  opencode.json  package.json  privacy.html  tailwind.config.js  test-setup.ts
.claude/hooks/: wiki-drift-audit.sh  wiki-suggest-ingest.sh
.claude/rules/: deploy.md
.codex/: config.toml
.codex/hooks/: wiki-consider.sh  wiki-policy-check.sh  wiki-reindex.sh
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  deploy-site.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/excalidraw-guest/: editor.html  package.json  tsconfig.json  vite.config.ts
apps/extension/: index.html  package.json  tsconfig.json  vite.config.ts
apps/site/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
assets/: guide-page-BYtzo4xa.js  guide-page-CshIRo1n.js  index-BghIRLS1.js  index-CDkIpsCd.css  index-DyD86cDB.js  index-EexE86Uv.css  privacy-page-BOTyGB-5.js  privacy-page-t4w_avh0.js  solid-oTPqSrsS.js
public/: background.js  content.js  manifest.json
scripts/: bump-ext-version.sh  bump-version.sh  check-ipc-contract.sh  coverage-snapshot.sh  generate-icons.sh  i18n-check.ts  release-smoke.sh  run-e2e.sh
src/: env.d.ts  newtab.tsx
src/components/: App.tsx  FileAccessWarning.tsx  FileTree.tsx  (+3 more)
tools/miri-helpers-tests/: Cargo.toml
tools/miri-helpers-tests/src/: lib.rs
tools/miri-helpers-tests/tests/: helpers.rs
wiki/: index.md  log.md
(+99 files in other folders)
